--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
             </div>
             <section id="news">
           </section>
+          <!-- <div id="pagination" class="paginate">
+          </div> -->
+          <div id="loading">
+            <h1>Loading...</h1>
+          </div>
+          <div id="finished">
+            <h1>End of News</h1>
+          </div>
         </body>
+        
         <script src="script.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
